# translate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: .clang-format  CMakeLists.txt
src/client/: CMakeLists.txt  client_main.cpp  command_line_parser.cpp  command_line_parser.hpp  configuration.json  configuration_reader.cpp  configuration_reader.hpp  http_get_request.cpp  http_get_request.hpp  http_post_request.cpp  http_post_request.hpp  http_request.cpp  http_request.hpp  main.cpp  result_writer.cpp  result_writer.hpp
src/libs/: CMakeLists.txt
src/libs/mongoose-5.5/: CMakeLists.txt
src/scripts/: CMakeLists.txt  create_schema.sql  dict2sql.cpp  drop_schema.sql  populate_db.sh  process_language_resources.sh
src/server/: CMakeLists.txt  connection_data.cpp  connection_data.hpp  connection_string.cpp  connection_string.hpp  db_exception.cpp  db_exception.hpp  db_query.cpp  db_query.hpp  json.cpp  json.hpp  main.cpp  server.cpp  server.hpp  server_exception.cpp  server_exception.hpp  server_main.cpp
src/server/www/: help.html
src/test/: CMakeLists.txt
src/test/client/: CMakeLists.txt  command_line_parser_unit_test.cpp  configuration_reader_unit_test.cpp
src/test/server/: CMakeLists.txt  connection_string_unit_test.cpp  test_main.cpp
src/test/utils/: CMakeLists.txt  gender_unit_test.cpp  helper_unit_test.cpp  numerus_unit_test.cpp  test_main.cpp  word_class_unit_test.cpp
src/utils/: command_line_exception.cpp  command_line_exception.hpp  exception.cpp  exception.hpp  gender.cpp  gender.hpp  helper.cpp  helper.hpp  http_exception.cpp  http_exception.hpp  json_exception.cpp  json_exception.hpp  not_implemented_exception.cpp  not_implemented_exception.hpp  numerus.cpp  numerus.hpp  word_class.cpp  word_class.hpp
test/: CMakeLists.txt
test/client/: CMakeLists.txt  command_line_parser_unit_test.cpp  configuration_reader_unit_test.cpp  test_main.cpp
test/server/: CMakeLists.txt  connection_string_unit_test.cpp
test/utils/: CMakeLists.txt  numerus_unit_test.cpp
